<resources>
    <string name="app_name">Some Notes</string>
    <string name="note_title_req">Title</string>
    <string name="note_text_req">Note</string>
    <string name="save_action">Save</string>
    <string name="note_detail_fragment_title">Note Details</string>
    <string name="add_fragment_title">Add Note</string>
    <string name="edit_fragment_title">Edit Note</string>
    <string name="note_text">Note</string>
    <string name="last_update">Last Update:</string>
    <string name="note_title">Title</string>
    <string name="delete">Delete</string>
    <string name="delete_question">Are you sure you want to delete?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="edit_note">Edit Note</string>
    <string name="add_new_note">Add New Note</string>
    <string name="no_notes_yet">No Notes yet.</string>
</resources>