...
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="textStart"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/note_text_label" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_between_elements"
            android:contentDescription="@string/delete"
            android:src="@android:drawable/ic_menu_delete"
            app:layout_constraintTop_toBottomOf="@+id/note_update_at"
...
